--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "Apache",
   "readmeFilename": "README.md",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "coffee-script": "~1.6.3",
     "handlebars": "^1.0.12",
+    "jquery": "3.1.1",
     "less": "~1.4.2",
     "swagger-client": "2.0.41"
   }
